--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,1 @@
-# Node.js dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Next.js build output
-.next/
-out/
-
-# Logs
-logs
-*.log
-*.log.*
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Editor directories and files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# TypeScript build outputs
-*.tsbuildinfo
-
-# Prisma
-prisma/dev.db
-prisma/dev.db-journal
-prisma/migrations/
-
-# Build outputs
-dist/
-build/
-
-# Coverage directories
-coverage/
-
-# Temporary files
-*.tmp
-*.temp
-
-# Cache directories
-.cache/
-.next/cache/
-
-# Tailwind
-*.css.map
-
-# Storybook
-.storybook-out/
+node_modules
